--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
   <head>
       <title>Secret Agent Supply</title>
-  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <header>
     <div class="top">
-      <img src="./resources/images/logo.png" height="25px" width="25px"/>
+      <img src="./resources/images/logo.png"/>
       <h2>SECRET AGENT SUPPLY INC.</h2>
-    </div>
+     </div>
   </header>
 
   <body>
@@ -24,7 +24,7 @@
     </div>
     <div class="red">
         <nav>
-          <span><a>Eyewear</a></span>
+          <span>Eyewear</span>
           <span>Apparel</span>
           <span>Gadgets</span>
           <span>Vehicles</span>
@@ -32,10 +32,41 @@
           <span>Contact</span>
         </nav>
     </div>
+    <div class="items">
+
+      <div>
+        <img src="./resources/images/pen.png"/>
+          <p>Exploding Pen</p>
+      </div>
+
+      <div>
+        <img src="./resources/images/watch.png"/>
+          <p>Watch</p>
+      </div>
+
+      <div>
+        <img src="./resources/images/glasses.png"/>
+          <p>Glasses</p>
+      </div>
+    </div>
+
+    <div class="infobox">
+      <div>
+        <p>Location</p>
+        <a>-47.346436, 84.32354</a>
+      </div>
+      <div>
+        <p>Hours</p>
+        <a>0800-1800</a>
+      </div>
+
+    </div>
+
+
 
   </body>
 
   <footer class="bottom">
-
+    <p>Copyright Secret Agent Supply Inc.</p>
   </footer>
 </html>
